syntax="proto3";
option java_package="org.sid.customerdataservice.stub";
service CustomerService{
  rpc getAllCustomers(GetAllCustomersRequest) returns (GetCustomersResponse);
  rpc getCustomerById(GetCustomerByIdRequest) returns (GetCustomersByIdResponse);
  rpc saveCustomer(SaveCustomerRequest) returns (SaveCustomerResponse);
}

message GetAllCustomersRequest{}
message GetCustomersResponse{
    repeated Customer customers=1;
}
message Customer{
  int64 id=1;
  string name=2;
  string email=3;
}

message GetCustomerByIdRequest{
  int64 customerId=1;
}
message GetCustomersByIdResponse{
  Customer customer=1;
}
message SaveCustomerRequest{
  CustomerDto customer=1;
}
message SaveCustomerResponse{
  Customer customer=1;
}
message CustomerDto{
  string name=2;
  string email=3;
}
